--- a/_posts/2020-8-4-blog.md
+++ b/_posts/2020-8-4-blog.md
@@ -1,5 +1,5 @@
-fiddler listen 8899 就等同于 这个软件使用的是8899端口
++ fiddler listen 8899 就等同于 这个软件使用的是8899端口
 
-手机设置代理8899，就等同于手机发出的请求都由代理8899端口发出。
++ 手机设置代理8899，就等同于手机发出的请求都由代理8899端口发出。
 
-fiddler 启动的时候会将浏览器代理设置为他的端口
++ fiddler 启动的时候会将浏览器代理设置为他的端口
