--- a/_posts/2020-9-18-02  Js基础.md
+++ b/_posts/2020-9-18-02  Js基础.md
@@ -85,11 +85,11 @@ javascript是一种运行在***客户端***的***脚本语言***
 
      + 关键字：对于js来说有特殊意义的一些单词
 
-       ![1567826490600](./images/1567826490600.png)
+       ![1567826490600](../images/1567826490600.png)
 
      + 保留字：js保留了一些单词，这些单词现在不用，但是以后要用。
 
-       ![1567826506586](./images/1567826506586.png)
+       ![1567826506586](../images/1567826506586.png)
 
 
 
@@ -133,7 +133,7 @@ javascript是一种运行在***客户端***的***脚本语言***
 
      + 转义符
 
-       ![1567827352856](./images/1567827352856.png)
+       ![1567827352856](../images/1567827352856.png)
 
      + 字符串长度(length)
 
