--- a/_posts/2020-9-18-03  web API.md
+++ b/_posts/2020-9-18-03  web API.md
@@ -724,7 +724,7 @@ element.currentStyle.left
 
    除了width 和 height 以外的属性是相对于视图窗口的左上角来计算的。
 
-  ![1597396924481](images/1597396924481.png)
+  ![1597396924481](../images/1597396924481.png)
 
 
 
@@ -755,7 +755,7 @@ element.currentStyle.left
   + `e.pageY` ***光标***相对于 网页(文档document)内容***左上角的垂直位置***(推荐，相对于网页)
   + IE8 不支持可用 `scrollTop + clientY`
 
-![1591339348868](images/1591339348868.png)
+![1591339348868](../images/1591339348868.png)
 
 + 键盘码的属性
 
