--- a/_posts/2020-9-18-04  Js高级.md
+++ b/_posts/2020-9-18-04  Js高级.md
@@ -102,7 +102,7 @@ JS：基于对象的语言，<font color=red> 模拟面向对象 </font>
 
 ## 3.2 原型链图
 
-![1591601719415](./images/1591601719415.png)
+![1591601719415](../images/1591601719415.png)
 
 ## 3.3 属性查找原则
 
