--- a/_posts/2020-9-18-08  H5C3.md
+++ b/_posts/2020-9-18-08  H5C3.md
@@ -716,7 +716,7 @@ filter: blur(2);
 
     而从方向上来说，圆锥渐变的方向是这样的
 
-    ![1597383208136](./images/1597383208136.png)
+    ![1597383208136](../images/1597383208136.png)
 
 + https://www.cnblogs.com/coco1s/p/7079529.html
 
@@ -862,7 +862,7 @@ div {
 
 用x、y、z分别表示空间的三个维度，三条轴互相垂直
 
-![1569229901392](./images/1569229901392.png)
+![1569229901392](../images/1569229901392.png)
 
 
 
