--- a/_posts/2020-9-18-18  React.md
+++ b/_posts/2020-9-18-18  React.md
@@ -479,7 +479,7 @@ ReactDOM.render(<Hello />, document.getElementById('root'))
 
 一个组件从开始到消亡所经历的各种状态（只有class组件有生命周期）
 
-![1568877192958](./images/1568877192958.png)
+![1568877192958](../images/1568877192958.png)
 
 > 挂载阶段(进入页面或组件渲染时执行)
 
